fixed the alignment for menu items

--- a/customer-frontend/src/components/landingpage/annoucementsection/announcement.css
+++ b/customer-frontend/src/components/landingpage/annoucementsection/announcement.css
@@ -29,16 +29,18 @@ button.rec-dot {
     box-shadow: 0 0 1px 3px rgba(223, 149, 11, 0.5);
 }
 
-button.rec-dot_active{
+button.rec-dot_active {
     box-shadow: 0 0 1px 3px rgba(223, 149, 11, 0.5);
     background-color: orange;
 }
 
 .rec.rec-arrow {
     background: rgb(119, 78, 2);
+    color: white
 }
 
 .rec.rec-arrow:hover:enabled,
 .rec.rec-arrow:focus:enabled {
     background: orange;
+    color: black
 }
